[package]
name = "mongodb-rust-ping"
version = "0.1.0"
edition = "2021"
authors = [
  "SYNDIKAT7 GmbH <hello@syndikat7.de>",
  "Jan Votava <votava@gmail.com>",
]
license = "MIT"
description = "A tool to ping mongodb"
readme = "README.md"
homepage = "https://github.com/janvotava/mongodb-rust-ping"
repository = "https://github.com/janvotava/mongodb-rust-ping"
keywords = ["cli", "mongodb", "ping"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
mongodb = { version = "2.6.1", features = ["tokio-sync"] }
